# ActuarialSystemv2

./: CLAUDE.md  COLUMN_MAPPING.md  Cargo.toml  Excel_with_5pct.csv  IMPLEMENTATION_PLAN.md  Overview_and_goals.md  PROGRESS.md  RESERVE_IMPLEMENTATION_PLANS.md  RSeriatimSnippet.md  Reserve implementation.md  Rust vs Excel comparison.xlsx  Trellis - Reference Rate Calculator 20250926.xlsm  assumptions_combined.xlsx  block_projection_output.csv  block_projection_output_withRecalc.csv  hedge_gains_by_policy.csv  hedge_gains_by_policy_comparison.csv  pricing_inforce.csv  projection_output.csv  test_EOPAVs.md
cashflow_examples/: README.md  output_10.csv  output_100.csv  output_1144.csv  output_1234.csv  output_1450.csv  output_2.csv  output_200.csv  output_2000.csv  output_2178.csv  output_22.csv  output_2800.csv  rust_output_10.csv  rust_output_100.csv  rust_output_1144.csv  rust_output_1234.csv  rust_output_1450.csv  rust_output_2.csv  rust_output_200.csv  rust_output_2000.csv  rust_output_2178.csv  rust_output_22.csv  rust_output_2800.csv
data/: sample_inforce.csv
data/assumptions/: free_withdrawal_util.csv  mortality_age_factors.csv  mortality_base_rates.csv  mortality_improvement.csv  payout_factors.csv  rmd_rates.csv  surrender_charges.csv  surrender_predictive_model.csv
src/: LAST_WORKING_ON.md  lib.rs  main.rs  scenario.rs
src/assumptions/: lapse.rs  loader.rs  mod.rs  mortality.rs  product.rs  pwd.rs
src/policy/: data.rs  loader.rs  mod.rs
src/projection/: cashflows.rs  engine.rs  irr.rs  mod.rs  state.rs
src/reserves/: benefits.rs  cache.rs  carvm.rs  (+3 more)
(+3 files in other folders)
