[package]
name = "actuarial_system"
version = "0.1.0"
edition = "2021"
description = "High-performance actuarial projection system for FIA products with GLWB riders"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV parsing
csv = "1.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Parallel processing
rayon = "1.10"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Command line interface
clap = { version = "4.5", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# AWS Lambda runtime
lambda_runtime = "0.13"
tokio = { version = "1", features = ["macros"] }
aws_lambda_events = "0.15"

[dev-dependencies]
# Testing utilities
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
